fix column getting too big

--- a/frontend/css/main.scss
+++ b/frontend/css/main.scss
@@ -21,6 +21,7 @@ nav.navbar {
 
 .container {
 	margin-bottom: 1rem;
+  width: auto;
 }
 
 @media(max-width: 767px) {
